--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,58 @@
 aiocache==0.12.3
+annotated-doc==0.0.4
 annotated-types==0.7.0
-anyio==4.10.0
-certifi==2025.8.3
-click==8.2.1
-coverage==7.10.6
+anyio==4.12.0
+certifi==2025.11.12
+click==8.3.1
+coverage==7.12.0
 distro==1.9.0
 dnspython==2.8.0
 email-validator==2.3.0
-fastapi==0.116.2
-fastapi-cli==0.0.12
-fastapi-cloud-cli==0.1.5
+fastapi==0.123.9
+fastapi-cli==0.0.16
+fastapi-cloud-cli==0.6.0
+fastar==0.8.0
 h11==0.16.0
 httpcore==1.0.9
-httptools==0.6.4
+httptools==0.7.1
 httpx==0.28.1
-idna==3.10
-iniconfig==2.1.0
+idna==3.11
+iniconfig==2.3.0
 jinja2==3.1.6
-jiter==0.11.0
+jiter==0.12.0
 markdown-it-py==4.0.0
-markupsafe==3.0.2
+markupsafe==3.0.3
 mdurl==0.1.2
-openai==1.107.3
+openai==2.9.0
 packaging==25.0
-pillow==11.3.0
+pillow==12.0.0
 pluggy==1.6.0
-polars==1.33.1
-pydantic==2.11.9
-pydantic-core==2.33.2
-pydantic-settings==2.10.1
+polars==1.35.2
+polars-runtime-32==1.35.2
+pydantic==2.12.5
+pydantic-core==2.41.5
+pydantic-settings==2.12.0
 pygments==2.19.2
-pytest==8.4.2
-pytest-asyncio==1.2.0
+pytest==9.0.1
+pytest-asyncio==1.3.0
 pytest-cov==7.0.0
-python-dotenv==1.1.1
+python-dotenv==1.2.1
 python-multipart==0.0.20
-pyyaml==6.0.2
-rich==14.1.0
-rich-toolkit==0.15.1
-rignore==0.6.4
-sentry-sdk==2.38.0
+pyyaml==6.0.3
+rich==14.2.0
+rich-toolkit==0.17.0
+rignore==0.7.6
+sentry-sdk==2.47.0
 shellingham==1.5.4
 sniffio==1.3.1
-starlette==0.48.0
+starlette==0.50.0
 tqdm==4.67.1
-ty==0.0.1a20
-typer==0.17.4
+ty==0.0.1a31
+typer==0.20.0
 typing-extensions==4.15.0
-typing-inspection==0.4.1
-urllib3==2.5.0
-uvicorn==0.35.0
-uvloop==0.21.0
-watchfiles==1.1.0
+typing-inspection==0.4.2
+urllib3==2.6.0
+uvicorn==0.38.0
+uvloop==0.22.1
+watchfiles==1.1.1
 websockets==15.0.1
