Add agent instructions and project documentation
- Introduced AGENTS.md with comprehensive instructions for the hackathon backend service, detailing project overview, tech stack, project structure, environment configuration, common commands, middleware stack, error handling, request validation, utility decorators, coding conventions, best practices, and API endpoints.
- Removed outdated coding standards and copilot instructions files to streamline documentation.
- Updated VSCode settings to include additional terms for spell checking.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,13 @@
         ".pytest_cache": true
     },
     "cSpell.words": [
+        "agentic",
         "aiocache",
         "anyio",
         "asyncio",
         "certifi",
         "dnspython",
+        "docstrings",
         "dotenv",
         "dtos",
         "fastapi",
@@ -30,6 +32,7 @@
         "pluggy",
         "pydantic",
         "pygments",
+        "pyproject",
         "pytest",
         "pyyaml",
         "rignore",
