Refactor project documentation and update dependencies
- Streamlined AGENTS.md by removing outdated tech stack references and enhancing clarity in project overview.
- Updated README.md to include a more detailed tech stack and project structure, improving onboarding for new developers.
- Removed unnecessary dependencies (OpenAI SDK, Pillow, Polars) from requirements.txt and updated fastapi version.
- Adjusted VSCode settings for improved spell checking and added relevant terms.
- Enhanced environment configuration instructions for better clarity.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
         "dtos",
         "fastapi",
         "fastar",
+        "getifaddr",
         "healthcheck",
+        "howpublished",
         "httpcore",
         "httptools",
         "httpx",
@@ -26,9 +28,10 @@
         "Initalization",
         "jinja",
         "jiter",
+        "louisbrulenaudet",
         "markupsafe",
         "mdurl",
-        "openai",
+        "Medgemma",
         "pluggy",
         "pydantic",
         "pygments",
